@@ -205,8 +205,7 @@ GraphNode::GraphNode(ExecutionPlan* plan, ExecutionNodeId id,
       if (ServerState::instance()->isRunningInCluster()) {
         auto c = ci.getCollection(_vocbase->name(), eColName);
         if (!c->isSmart()) {
-          auto aqlCollection = collections.get(eColName);
-          addEdgeCollection(aqlCollection, dir);
+          addEdgeCollection(collections, eColName, dir);
         } else {
           std::vector<std::string> names;
           if (_isSmart) {
@@ -215,13 +214,11 @@ GraphNode::GraphNode(ExecutionPlan* plan, ExecutionNodeId id,
             names = c->realNamesForRead();
           }
           for (auto const& name : names) {
-            auto aqlCollection = collections.get(name);
-            addEdgeCollection(aqlCollection, dir);
+            addEdgeCollection(collections, name, dir);
           }
         }
       } else {
-        auto aqlCollection = collections.get(eColName);
-        addEdgeCollection(aqlCollection, dir);
+        addEdgeCollection(collections, eColName, dir);
       }
     }
     _graphInfo.close();
@@ -260,8 +257,7 @@ GraphNode::GraphNode(ExecutionPlan* plan, ExecutionNodeId id,
       if (ServerState::instance()->isRunningInCluster()) {
         auto c = ci.getCollection(_vocbase->name(), n);
         if (!c->isSmart()) {
-          auto aqlCollection = collections.get(n);
-          addEdgeCollection(aqlCollection, _defaultDirection);
+          addEdgeCollection(collections, n, _defaultDirection);
         } else {
           std::vector<std::string> names;
           if (_isSmart) {
@@ -270,13 +266,11 @@ GraphNode::GraphNode(ExecutionPlan* plan, ExecutionNodeId id,
             names = c->realNamesForRead();
           }
           for (auto const& name : names) {
-            auto aqlCollection = collections.get(name);
-            addEdgeCollection(aqlCollection, _defaultDirection);
+            addEdgeCollection(collections, name, _defaultDirection);
           }
         }
       } else {
-        auto aqlCollection = collections.get(n);
-        addEdgeCollection(aqlCollection, _defaultDirection);
+        addEdgeCollection(collections, n, _defaultDirection);
       }
     }
 
@@ -288,8 +282,7 @@ GraphNode::GraphNode(ExecutionPlan* plan, ExecutionNodeId id,
     }
     _vertexColls.reserve(length);
     for (auto const& v : vColls) {
-      auto aqlCollection = collections.get(v);
-      addVertexCollection(aqlCollection);
+      addVertexCollection(collections, v);
     }
   }
 }
@@ -360,10 +353,10 @@ GraphNode::GraphNode(ExecutionPlan* plan, arangodb::velocypack::Slice const& bas
   // MSVC did throw an internal compiler error with auto instead of std::string
   // here at the time of this writing (some MSVC 2019 14.25.28610). Could
   // reproduce it only in our CI, my local MSVC (same version) ran fine...
-  auto getAqlCollectionFromName = [&](std::string const& name) -> aql::Collection* {
+  auto getAqlCollectionFromName = [&](std::string const& name) -> aql::Collection& {
     // if the collection was already existent in the query, addCollection will
     // just return it.
-    return query.collections().add(name, AccessMode::Type::READ, aql::Collection::Hint::Collection);
+    return *query.collections().add(name, AccessMode::Type::READ, aql::Collection::Hint::Collection);
   };
 
   auto vPackDirListIter = VPackArrayIterator(dirList);
@@ -377,7 +370,7 @@ GraphNode::GraphNode(ExecutionPlan* plan, arangodb::velocypack::Slice const& bas
     TRI_ASSERT(d == TRI_EDGE_IN || d == TRI_EDGE_OUT);
     std::string e =
         arangodb::basics::VelocyPackHelper::getStringValue(*edgeIt, "");
-    auto* aqlCollection = getAqlCollectionFromName(e);
+    auto& aqlCollection = getAqlCollectionFromName(e);
     addEdgeCollection(aqlCollection, d);
   }
 
@@ -391,7 +384,7 @@ GraphNode::GraphNode(ExecutionPlan* plan, arangodb::velocypack::Slice const& bas
 
   for (VPackSlice it : VPackArrayIterator(vertexCollections)) {
     std::string v = arangodb::basics::VelocyPackHelper::getStringValue(it, "");
-    auto aqlCollection = getAqlCollectionFromName(v);
+    auto& aqlCollection = getAqlCollectionFromName(v);
     addVertexCollection(aqlCollection);
   }
 
@@ -479,7 +472,7 @@ void GraphNode::setGraphInfoAndCopyColls(std::vector<Collection*> const& edgeCol
   _graphInfo.close();
 
   for (auto& it : vertexColls) {
-    addVertexCollection(it);
+    addVertexCollection(*it);
   }
 }
 
@@ -674,14 +667,14 @@ Collection const* GraphNode::collection() const {
   return _edgeColls.front();
 }
 
-void GraphNode::injectVertexCollection(aql::Collection* other) {
+void GraphNode::injectVertexCollection(aql::Collection& other) {
   TRI_ASSERT(ServerState::instance()->isCoordinator());
 
 #ifdef ARANGODB_ENABLE_MAINTAINER_MODE
   // This is a workaround to inject all unknown aql collections into
   // this node, that should be list of unique values!
   for (auto const& v : _vertexColls) {
-    TRI_ASSERT(v->name() != other->name());
+    TRI_ASSERT(v->name() != other.name());
   }
 #endif
   addVertexCollection(other);
@@ -697,20 +690,38 @@ void GraphNode::enhanceEngineInfo(VPackBuilder& builder) const {
 }
 #endif
 
-void GraphNode::addEdgeCollection(aql::Collection* collection, TRI_edge_direction_e dir) {
-  TRI_ASSERT(collection != nullptr);
-  auto const& n = collection->name();
+void GraphNode::addEdgeCollection(Collections const& collections, std::string const& name,
+                                  TRI_edge_direction_e dir) {
+  auto aqlCollection = collections.get(name);
+  if (aqlCollection != nullptr) {
+    addEdgeCollection(*aqlCollection, dir);
+  } else {
+    std::string msg = "Edge collection `";
+    msg += name;
+    msg += "` could not be found";
+    if (_graphObj != nullptr) {
+      msg += ", but is part of graph `";
+      msg += _graphObj->name();
+      msg += "`";
+    }
+    msg += ".";
+    THROW_ARANGO_EXCEPTION_MESSAGE(TRI_ERROR_ARANGO_DATA_SOURCE_NOT_FOUND, msg);
+  }
+}
+
+void GraphNode::addEdgeCollection(aql::Collection& collection, TRI_edge_direction_e dir) {
+  auto const& n = collection.name();
   if (_isSmart) {
     if (n.compare(0, 6, "_from_") == 0) {
       if (dir != TRI_EDGE_IN) {
         _directions.emplace_back(TRI_EDGE_OUT);
-        _edgeColls.emplace_back(collection);
+        _edgeColls.emplace_back(&collection);
       }
       return;
     } else if (n.compare(0, 4, "_to_") == 0) {
       if (dir != TRI_EDGE_OUT) {
         _directions.emplace_back(TRI_EDGE_IN);
-        _edgeColls.emplace_back(collection);
+        _edgeColls.emplace_back(&collection);
       }
       return;
     }
@@ -718,19 +729,38 @@ void GraphNode::addEdgeCollection(aql::Collection* collection, TRI_edge_directio
 
   if (dir == TRI_EDGE_ANY) {
     _directions.emplace_back(TRI_EDGE_OUT);
-    _edgeColls.emplace_back(collection);
+    _edgeColls.emplace_back(&collection);
 
     _directions.emplace_back(TRI_EDGE_IN);
-    _edgeColls.emplace_back(collection);
+    _edgeColls.emplace_back(&collection);
   } else {
     _directions.emplace_back(dir);
-    _edgeColls.emplace_back(collection);
+    _edgeColls.emplace_back(&collection);
   }
 }
 
-void GraphNode::addVertexCollection(aql::Collection* collection) {
-  TRI_ASSERT(collection != nullptr);
-  _vertexColls.emplace_back(collection);
+void GraphNode::addVertexCollection(Collections const& collections, std::string const& name) {
+  auto aqlCollection = collections.get(name);
+  if (aqlCollection != nullptr) {
+    addVertexCollection(*aqlCollection);
+  } else {
+    std::string msg = "Vertex collection `";
+    msg += name;
+    msg += "` could not be found";
+    // If we have vertex collections, _graphObj should never be nullptr.
+    // But let's stay on the side that's obviously safe without any context.
+    if (_graphObj != nullptr) {
+      msg += ", but is part of graph `";
+      msg += _graphObj->name();
+      msg += "`";
+    }
+    msg += ".";
+    THROW_ARANGO_EXCEPTION_MESSAGE(TRI_ERROR_ARANGO_DATA_SOURCE_NOT_FOUND, msg);
+  }
+}
+
+void GraphNode::addVertexCollection(aql::Collection& collection) {
+  _vertexColls.emplace_back(&collection);
 }
 
 std::vector<aql::Collection const*> GraphNode::collections() const {
